<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alessandroamico.myvapetool.MainActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/resistance"
        android:ems="10"
        android:id="@+id/resistanceText"
        android:layout_toLeftOf="@+id/resistanceSimbol"
        android:layout_toStartOf="@+id/resistanceSimbol" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resistanceSimbol"
        android:id="@+id/resistanceSimbol"
        android:layout_alignBottom="@+id/resistanceText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/voltage"
        android:ems="10"
        android:id="@+id/voltageText"
        android:layout_below="@id/resistanceText"
        android:layout_toLeftOf="@+id/voltageSimbol"
        android:layout_toStartOf="@+id/voltageSimbol" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/voltageSimbol"
        android:id="@+id/voltageSimbol"
        android:layout_alignBottom="@+id/voltageText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/current"
        android:ems="10"
        android:id="@+id/currentText"
        android:layout_below="@id/voltageText"
        android:layout_toLeftOf="@+id/currentSimbol"
        android:layout_toStartOf="@+id/currentSimbol" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/currentSimbol"
        android:id="@+id/currentSimbol"
        android:layout_alignBottom="@+id/currentText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/power"
        android:ems="10"
        android:id="@+id/powerText"
        android:layout_below="@id/currentText"
        android:layout_toLeftOf="@+id/powerSimbol"
        android:layout_toStartOf="@+id/powerSimbol" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/powerSimbol"
        android:id="@+id/powerSimbol"
        android:layout_alignBottom="@+id/powerText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/resetButton"
        android:onClick="resetFields"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/CalculateButton"
        android:onClick="calculate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
